# LXfanMall-Agent

./: .gitignore  LICENSE  README.md  start-admin.bat  start-web.bat
LXfanMallWeb/: .prettierrc  (+7 more)
agent-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agent-service/app/: main.py
agent-service/app/agent/: graph.py  llm.py  nodes.py  prompts.py  router.py  session.py  token_callback.py  token_reporter.py  tool_result.py  tools.py
agent-service/app/config/: constants.py  settings.py
agent-service/app/core/: exceptions.py  limiter.py  logging.py
agent-service/app/deepdoc/: __init__.py  base.py  docx_parser.py  excel_parser.py  html_parser.py  md_parser.py  pdf_parser.py  txt_parser.py  utils.py
agent-service/app/mcp/: mall_adapter.py
agent-service/app/memory/: __init__.py  user_profile.py
agent-service/app/models/: schemas.py
agent-service/app/nlp/: __init__.py  ecommerce_dict.txt  keyword_extractor.py  query_builder.py  text_processor.py  tokenizer.py
agent-service/app/rag/: __init__.py  chunker.py  document_service.py  embedder.py  engine.py  query_cache.py  reranker.py  retrieval.py  vector_store.py
agent-service/data/rag-data/: coupon-guide.md  delivery-logistics-policy.md  faq-ecommerce.md  member-points-policy.docx  member-points-policy.md  payment-security-policy.md  product-recommendation-guide.md  product-review-policy.md  return-exchange-policy.md  shopping-guide.md
agent-service/tests/: conftest.py  test_phase3_smoke.py
agent-service/tests/unit/: test_deps.py  test_router.py  test_tool_result.py
(+179 files in other folders)
